--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "contentlayer": "^0.3.4",
+    "framer-motion": "^12.16.0",
     "next": "15.3.3",
     "next-contentlayer": "^0.3.4",
     "react": "^19.0.0",
