--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "contentlayer": "^0.3.4",
     "framer-motion": "^12.16.0",
-    "next": "15.3.3",
+    "i18next": "^25.2.1",
+    "i18next-http-backend": "^3.0.2",
+    "next": "13.5.9",
     "next-contentlayer": "^0.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "^15.5.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
